test/consumingLhs6.slq

def main(){
	x:=H(0:ğ”¹);
	dup[ğ”¹](measure(x)):= /// error
		x;
}
